# encyclopedai

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  README.md  docker-compose.yml  manage.py  pyproject.toml  todo.txt
.github/workflows/: deploy.yml
encyclopedai/: asgi.py  settings.py  urls.py  wsgi.py
main/: admin.py  models.py  services.py  slugs.py  tests.py  urls.py  utils.py  views.py
main/migrations/: 0002_article.py  0003_article_summary_snippet_alter_user_first_name.py  0004_articlecreationlock.py  0005_article_content_trgm_index.py  0006_article_article_title_trgm_and_more.py  0007_add_outgoing_links.py  0008_regenerate_outgoing_links.py
main/templatetags/: markdown_filters.py
misc/dokku/: uwsgi.ini
static/css/: main.css
static/js/: base.js
templates/: article_detail.html  article_pending.html  base.html  index.html
templates/fragments/: spinner.html
