[project]
name = "encyclopedai"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
dependencies = [
    "django==5.2.7",
    "djangoql",
    "django-extensions",
    "django-redis",
    "markdown",
    "beautifulsoup4",
    "psycopg2-binary",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "sentry-sdk==2.49.0",
    "shortuuid",
    "unittest-xml-reporting",
    "uwsgi",
    "werkzeug",
    "whitenoise",
    "openai",
]

[tool.uv]
dev-dependencies = [
    "ipython",
    "bpython",
    "pudb",
    "django-stubs",
]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.ignore = ["F403", "E501", "N802", "N803", "N806", "C901", "D100", "D102", "D102", "D10"]

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = ["**/migrations/**"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "encyclopedai.settings"
python_classes = "*Tests"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
